--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -16,10 +16,10 @@
     <section id="notespanel">
       <div class="header">
         <ul>
-          <li class="selected"><a href="#"><span class="glyphicon glyphicon-notes"></span></a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-tag"></span></a></li>
-          <li><a href="#"><span class="glyphicon glyphicon-cogwheel"></span></a></li>
+          <li class="selected"><a href="#"><span class="glyphicon glyphicon-notes"></span><span class="tooltiptext">Notes</span></a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-search"></span><span class="tooltiptext">Search</span></a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-tag"></span><span class="tooltiptext">Tags</span></a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-cogwheel"></span><span class="tooltiptext">Preferences</span></a></li>
         </ul>
       </div>
       <div class="newnote">
@@ -36,11 +36,12 @@
         </div>
         <div class="note selected">
           <h3>Note Title</h3>
+          <p>note snippet 1234567890-1234567890-1234567890-lssldkjf laks dlfaksj dflkasj dflkas djflaks ...</p><span class="date">May 3, 2016</span>
+        </div>
+        <div class="note">
+          <h3>Note Title something else goes ehre</h3>
           <p>note snippet 1234567890-1234567890-1234567890-lssldkjf laks dlfaksj dflkasj dflkas djflaks ...</p>
-          <ul>
-            <li class="tag"><span>programming</span></li>
-            <li class="tag"><span>Web development</span></li>
-          </ul>
+          <p>03/25/2016</p>
         </div>
         <div class="note">
           <h3>Untitled</h3>
@@ -72,7 +73,7 @@
       </div>
     </section>
     <!--note preview-->
-    <section id="notesview">
+    <section id="notesedit">
       <div class="header"><a href="#"><span class="glyphicon glyphicon-show_lines"></span></a>
         <ul>
           <li class="tag">Tag1</li>
