--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -17,9 +17,9 @@
       <div id="tabs" class="header">
         <ul>
           <li class="selected"><a href="#"><span class="fa fa-file-text-o"></span><span class="tooltiptext">Notes</span></a></li>
+          <li><a href="#"><span class="fa fa-search"></span><span class="tooltiptext">Search</span></a></li>
           <li><a href="#"><span class="fa fa-tags"></span><span class="tooltiptext">Tags</span></a></li>
           <li><a href="#"><span class="fa fa-cog"></span><span class="tooltiptext">Preferences</span></a></li>
-          <li><a href="#"><span class="fa fa-trash-o"></span><span class="tooltiptext">Trash</span></a></li>
         </ul>
       </div>
       <div id="notes" class="currentpanel">
