--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -39,37 +39,53 @@
             <h3>Note Title something else goes ehre</h3>
             <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
           </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.sjda fklajslk lsjdl   slkd</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
           <div class="note selected">
             <h3>Note Title something else goes ehre</h3>
-            <p>something here lkasjdf;kas lkj;adadsf.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            <p>something here. lsdkj f;lksd jf;askl dfj;alks dfj;alks</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          </div>
+          <div class="note">
+            <h3>Note Title something else goes ehre</h3>
+            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
           </div>
         </div>
-        <div class="tools">
-          <input type="text">
-        </div>
+        <!-- .tools-->
+        <!--     input(type="text")-->
       </div>
       <!-- #tags-->
       <!-- #settings        -->
     </section>
     <section id="edit">
       <div id="tags" class="header">
+        <div class="menu-toggle"><span class="fa fa-bars"></span></div>
         <ul>
-          <li class="menu-toggle"><span class="fa fa-bars"></span></li>
-          <li class="tag"><span>Add tag</span></li>
           <li class="tag"><span>Ideas</span></li>
           <li class="tag"><span>Work</span></li>
-          <li class="tag"><span>Work1</span></li>
-          <li class="tag"><span>Work2</span></li>
-          <li class="tag"><span>Work3</span></li>
-          <li class="tag"><span>Work4</span></li>
-          <li class="tag"><span>Work5</span></li>
-          <!-- li.tag: span Work6-->
-          <!-- li.tag: span Work7-->
-          <!-- li.tag: span Work8-->
-          <!-- li.tag: span Work9-->
-          <!-- li.tag: span Work10-->
-          <!-- li.tag: span Work11-->
-          <!-- li.tag: span Work1112-->
+          <li class="tag"><span>programming</span></li>
+          <li class="tag"><span>+</span></li>
         </ul>
       </div>
       <div class="body">
