added sort dropdown

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -25,7 +25,14 @@
       <div id="notes" class="currentpanel">
         <div class="tools">
           <div class="newnote">New Note</div>
-          <div class="sort">Sort<span class="fa fa-caret-down"></span></div>
+          <div class="sort">Sort<span class="fa fa-caret-down"></span>
+            <ul>
+              <li>Title (ascending)</li>
+              <li>Title (descending)</li>
+              <li>Newest first</li>
+              <li>Oldest first</li>
+            </ul>
+          </div>
         </div>
         <div class="body">
           <!-- .note.selected-->
