removed black header

--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -108,4 +108,6 @@
       </div>
     </section>
   </body>
+  <script src="js/angular.min.js"> </script>
+  <script src="js/bundle.js"> </script>
 </html>
