--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -13,100 +13,100 @@
   </head>
   <body>
     <!--notes list / search / settings panel-->
-    <section id="panel">
-      <div id="tabs" class="header">
-        <ul>
-          <li class="selected"><a href="#"><span class="fa fa-file-text-o"></span><span class="tooltiptext">Notes</span></a></li>
-          <li><a href="#"><span class="fa fa-search"></span><span class="tooltiptext">Search</span></a></li>
-          <li><a href="#"><span class="fa fa-tags"></span><span class="tooltiptext">Tags</span></a></li>
-          <li><a href="#"><span class="fa fa-cog"></span><span class="tooltiptext">Preferences</span></a></li>
-        </ul>
-      </div>
-      <div id="notes" class="currentpanel">
-        <div class="tools">
-          <div class="newnote">New Note</div>
-          <div class="sort">Sort<span class="fa fa-caret-down"></span>
-            <ul>
-              <li>Title (ascending)</li>
-              <li>Title (descending)</li>
-              <li>Newest first</li>
-              <li>Oldest first</li>
-            </ul>
-          </div>
+    <div class="app-container">
+      <section id="panel">
+        <div id="tabs" class="header">
+          <ul>
+            <li class="selected"><a href="#"><span class="fa fa-file-text-o"></span><span class="tooltiptext">Notes</span></a></li>
+            <li><a href="#"><span class="fa fa-search"></span><span class="tooltiptext">Search</span></a></li>
+            <li><a href="#"><span class="fa fa-tags"></span><span class="tooltiptext">Tags</span></a></li>
+            <li><a href="#"><span class="fa fa-cog"></span><span class="tooltiptext">Preferences</span></a></li>
+          </ul>
         </div>
-        <div class="body">
-          <!-- .note.selected-->
-          <!--     h3 Note Title ippet ksldjf lsk sdlfks -->
-          <!--     p note snippet ksldjf lsk djflssldkjf laks dlfaksj dflkasjdflkas djflaks ...-->
-          <!--     ul-->
-          <!--         li.tag: span Work1234560-->
-          <!--         li.tag: span programming-->
-          <!--         li.tag: span development-->
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+        <div id="noteslist" class="currentpanel">
+          <div class="tools">
+            <div class="sort">Sort<span class="fa fa-caret-down"></span>
+              <ul>
+                <li>Title (ascending)</li>
+                <li>Title (descending)</li>
+                <li>Newest first</li>
+                <li>Oldest first</li>
+              </ul>
+            </div>
+            <div class="newnote">New Note</div>
           </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.sjda fklajslk lsjdl   slkd</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+          <div class="body">
+            <!-- .note.selected-->
+            <!--     h3 Note Title ippet ksldjf lsk sdlfks -->
+            <!--     p note snippet ksldjf lsk djflssldkjf laks dlfaksj dflkasjdflkas djflaks ...-->
+            <!--     ul-->
+            <!--         li.tag: span Work1234560-->
+            <!--         li.tag: span programming-->
+            <!--         li.tag: span development-->
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.sjda fklajslk lsjdl   slkd</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note selected">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here. lsdkj f;lksd jf;askl dfj;alks dfj;alks</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
+            <div class="note">
+              <h3>Note Title something else goes ehre</h3>
+              <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
+            </div>
           </div>
-          <div class="note selected">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here. lsdkj f;lksd jf;askl dfj;alks dfj;alks</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
-          <div class="note">
-            <h3>Note Title something else goes ehre</h3>
-            <p>something here.</p><span class="date">Jul 4, 2015</span><span class="action fa fa-trash-o"></span><span class="action fa fa-envelope-o"></span>
-          </div>
+          <!-- .tools-->
+          <!--     input(type="text")-->
         </div>
-        <!-- .tools-->
-        <!--     input(type="text")-->
-      </div>
-      <!-- #tags-->
-      <!-- #settings        -->
-    </section>
-    <section id="edit">
-      <div id="tags" class="header">
-        <div class="menu-toggle"><span class="fa fa-bars"></span></div>
-        <ul>
-          <li class="tag"><span>Ideas</span></li>
-          <li class="tag"><span>Work</span></li>
-          <li class="tag"><span>programming</span></li>
-          <li class="tag"><span>+</span></li>
-        </ul>
-      </div>
-      <div class="body">
-        <input placeholder="Add a title...">
-        <div contenteditable="true" data-text="Enter text here" class="content"></div>
-      </div>
-      <div id="actions-sidebar">
-        <ul>
-          <li><span class="action fa fa-floppy-o"></span></li>
-          <li><span class="action fa fa-envelope-o"></span></li>
-          <li><span class="action fa fa-trash-o"></span></li>
-        </ul>
-      </div>
-    </section>
+        <!-- #tags-->
+        <!-- #settings        -->
+      </section>
+      <section id="edit">
+        <div id="tags" class="header">
+          <!-- .menu-toggle: span.fa.fa-bars-->
+          <ul>
+            <li class="tag"><span>Ideas</span></li>
+            <li class="tag"><span>Work</span></li>
+            <li class="tag"><span>programming</span></li>
+            <li class="tag"><span>+</span></li>
+          </ul>
+        </div>
+        <div id="edit-body">
+          <input placeholder="Add a title...">
+          <div contenteditable="true" data-text="Enter text here" class="content"></div>
+        </div>
+        <!-- #actions-sidebar-->
+        <!--     ul-->
+        <!--         li: span.action.fa.fa-floppy-o-->
+        <!--         li: span.action.fa.fa-envelope-o-->
+        <!--         li: span.action.fa.fa-trash-o-->
+      </section>
+    </div>
   </body>
   <script src="js/angular.min.js"> </script>
   <script src="js/bundle.js"> </script>
