--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -98,7 +98,8 @@
         </div>
         <div id="edit-body">
           <input placeholder="Add a title...">
-          <div contenteditable="true" data-text="Enter text here" class="content"></div>
+          <textarea placeholder="Enter text here"></textarea>
+          <!-- .content(contenteditable="true" data-text="Enter text here")-->
         </div>
         <!-- #actions-sidebar-->
         <!--     ul-->
